# Redbull-API

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPROVEMENTS_COMPLETED.md  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  fix_imports.py  pyproject.toml  requirements.txt  start.py
deploy/: Chart.yaml  DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  README.md  values-dev.yaml  values-disconnected.yaml  values-prod.yaml  values.yaml
deploy/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_UPDATE.md  CLAUDE.md  CODE_QUALITY.md  DOCKER_DEPLOYMENT_COMPLETE.md  HELM_CHART_COMPLETE.md  LOGGING.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md
examples/: api_client_example.py  basic_usage.py
offline-deployment/: DEPLOYMENT-INSTRUCTIONS.txt  checksums.txt  docker-compose.offline.yml
scripts/: build-and-push.sh  save-for-offline.sh  validate-deployment.sh
src/: __init__.py  cli.py  config.py  main.py
src/api/: __init__.py
src/config/: __init__.py  constants.py  settings.py
src/defaults/: __init__.py  cluster_flavors.py  defaults_manager.py
src/generators/: __init__.py  cluster_builder.py  cluster_generator.py  template_loader.py
src/git_ops/: __init__.py  path_validator.py  repository.py
src/models/: __init__.py  cluster.py  input.py  requests.py
src/services/: __init__.py  cluster_service.py  config_builder.py  converters.py  validators.py
src/static/: index.html
(+48 files in other folders)
